--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
  </head>
  <body>
      <div id='app'></div>
-<script src="./bundle.js"></script>
+<script src="https://gurjotportfolio.s3-us-west-1.amazonaws.com/bundle.js"></script>
  </body>
 </html>
