--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html>
  <head>
    <title></title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <style>
     body {
     background-color: #151515;
     width: 100%;
     margin: 0;
     padding: 0;
-}
+    }
+    
+    @media only screen and (max-width: 500px){
+      body {
+        display: flex;
+      }
+    }
    </style>
  </head>
  <body>
      <div id='app'></div>
-<script src="https://gurjotportfolio.s3-us-west-1.amazonaws.com/bundle.js"></script>
+<script src="./bundle.js"></script>
  </body>
 </html>
