--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
    <title></title>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width" />
    <style>
     body {
     background-color: #151515;
@@ -10,12 +10,12 @@
     margin: 0;
     padding: 0;
     }
-    
-    @media only screen and (max-width: 500px){
+    @media only screen and (max-width: 600px){
       body {
         display: flex;
       }
     }
+   </style>
    </style>
  </head>
  <body>
